# pomodoro-tui

./: CHANGELOG  Cargo.toml  LICENSE  README.md
data/: db.json
src/: app.rs  events.rs  handler.rs  lib.rs  main.rs  tui.rs
src/handler/: keyboard.rs  mod.rs  mouse.rs
src/modules/: analytics.rs  copyright.rs  database.rs  home.rs  menu.rs  misc.rs  mod.rs  pomodoro.rs  settings.rs  tabs.rs  title.rs  todo.rs  utils.rs
