[package]
name = "pomodoro-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pomodoro_tui"
path = "src/main.rs"

[lib]
name = "pomodoro_tui"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.22", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", default-features = false, features = ["std"] }
tui = { version = "0.16", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"